[tool.poetry]
name = "dj-loguru"
version = "0.1.0"
description = "Simple logging application"
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
