[tool.poetry]
name = "dj-loguru"
version = "0.1.0"
description = "A simple logging application based on loguru"
authors = ["Roman Sotnikov <axeman.ofic@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/axemanofic/dj-loguru.git'

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
